[gd_scene load_steps=4 format=3 uid="uid://c7x18pv228xc7"]

[ext_resource type="Theme" uid="uid://3c4wfofywo74" path="res://themes/main_theme.tres" id="1_v1n4s"]
[ext_resource type="Script" path="res://source/item_display.gd" id="2_i4x4a"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_be57r"]
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="ItemDisplay" type="VBoxContainer"]
custom_minimum_size = Vector2(180, 0)
offset_right = 1.0
offset_bottom = 112.0
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("1_v1n4s")
theme_override_constants/separation = 0
script = ExtResource("2_i4x4a")

[node name="PanelContainer" type="PanelContainer" parent="."]
clip_children = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_be57r")

[node name="TextureButton" type="TextureButton" parent="PanelContainer"]
layout_mode = 2
stretch_mode = 3

[node name="Spacer" type="Control" parent="."]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "Text"
horizontal_alignment = 1
autowrap_mode = 3

[node name="YearLabel" type="Label" parent="."]
layout_mode = 2
theme_override_colors/font_color = Color(0.462745, 0.462745, 0.462745, 1)
theme_override_font_sizes/font_size = 14
horizontal_alignment = 1

[connection signal="mouse_entered" from="PanelContainer/TextureButton" to="." method="_on_texture_button_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/TextureButton" to="." method="_on_texture_button_mouse_exited"]
[connection signal="pressed" from="PanelContainer/TextureButton" to="." method="_on_texture_button_pressed"]
